src/objects/Example_TestObjectfor_ConfigChanges__c.object
<CustomObject>
    <description>This Test object is used for testing all config changes, like record types, picklists, workflows, approvals, etc.</description>
    <fields>
        <fullName>Example_Testfor_FieldDependencies2__c</fullName>
        <description>This is for testing Field Dependencies</description>
        <label>Example_Testfor_FieldDependencies2</label>
        <picklist>
            <controllingField>Example_Testfor_RecordType_Picklist__c</controllingField>
            <picklistValues>
                <fullName>TestX1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>TestX2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TestX3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TestX4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TestX5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Example_Testfor_FieldDependencies__c</fullName>
        <description>This is a test to see how field dependencies work</description>
        <label>Example_Testfor_FieldDependencies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Example_Testfor_RecordType_Picklist__c</fullName>
        <description>This contains data for testing picklist field availability in Record Type</description>
        <label>Example_Testfor_RecordType_Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>Test1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Test2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Example_TestObjectfor_ConfigChanges</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Ex_Test-{0000}</displayFormat>
        <label>Example_TestObjectfor_ConfigChanges Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Example_TestObjectfor_ConfigChanges</pluralLabel>
    <recordTypes>
        <fullName>Example_RecordType_1</fullName>
        <active>true</active>
        <description>This is for test purposes</description>
        <label>Example_RecordType_1</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>